# wanzhi-ai-lab

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md
deepagents-pro/: .env.example  README.md  pyproject.toml
deepagents-pro/examples/: README.md  REORGANIZATION_REPORT.md  async_subagent_demo.py  composite_backend_demo.py  database_query_demo.py  delegation_demo.py  demo.py  filesystem_backend_demo.py  human_in_the_loop_demo.py  local_shell_backend_demo.py  memory_backends_demo.py  permissions_demo.py  planning_demo.py  sandbox_backend_demo.py  simple_agent.py  skills_demo.py  store_backend_demo.py  subagent_demo.py  visualization_demo.py
deepagents-pro/frontend/: index.html  package-lock.json  package.json  vite.config.ts
deepagents-pro/frontend/src/: App.tsx  MarkdownBody.tsx  api.ts  deepagent-chat-transport.ts  stripThinkTags.ts  styles.css
deepagents-pro/skills/bundled/data-analysis-workflow/: SKILL.md
deepagents-pro/skills/docx/: SKILL.md
deepagents-pro/src/deepagent_pro/: __init__.py  config.py  logging_setup.py  main.py
deepagents-pro/src/deepagent_pro/agent/: backend.py  core.py  prompts.py  subagents.py
deepagents-pro/src/deepagent_pro/api/: chat_history.py  deps.py  routes.py  schemas.py
deepagents-pro/src/deepagent_pro/storage/: file_manager.py
deepagents-pro/src/deepagent_pro/tools/: browser.py  browser_snapshot.py  current_time.py  data_analysis.py  data_loader.py  datasource.py  external_api.py  (+5 more)
deepagents-pro/tests/: test_agent_backend.py  test_api.py  test_sql.py  test_tools.py  test_visualization.py
(+23 files in other folders)
